--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <h1 class="logo">Daniel S.M. Möhle</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Angebote</a></li>
-        <li><a href="#">Projekte</a></li>
-        <li><a href="#">Medien</a></li>
-        <li><a href="#">Über mich</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="projekte.html">Projekte</a></li>
+        <li><a href="medien.html">Medien</a></li>
+        <li><a href="ueber-mich.html">Über mich</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +37,12 @@
   </main>
 
   <footer>
-    <p>© 2025 Daniel S.M. Möhle</p>
+    <p>
+      © 2025 Daniel S.M. Möhle · 
+      <a href="impressum.html">Impressum</a> · 
+      <a href="datenschutz.html">Datenschutz</a>
+    </p>
   </footer>
 </body>
 </html>
+
