--- a/impressum.html
+++ b/impressum.html
@@ -47,7 +47,7 @@
   <section>
     <h2>Umsatzsteuer</h2>
     <p>
-      Keine Umsatzsteuer-ID vergeben / Kleinunternehmer gem. § 19 UStG.
+      Keine Umsatzsteuer-ID vergeben
     </p>
   </section>
 
