--- a/angebote.html
+++ b/angebote.html
@@ -16,6 +16,8 @@
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+        <li><a href="datenschutz.html">Datenschutz</a></li>
       </ul>
     </nav>
   </header>
@@ -25,48 +27,57 @@
       <h2>Meine Angebote</h2>
       <div class="angebot-list">
 
-        <div class="angebot">
-          <h3>🧪 Science & Beratung</h3>
+        <div class="angebot neon-card">
+          <h3>Science & Beratung</h3>
           <p>
             Fachliche Unterstützung in naturwissenschaftlichen Projekten, mit Schwerpunkt Physik und angrenzende Wissenschaften. 
-            <br><br>
+          </p>
+          <p>
             <strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und Erstellung fachlicher Texte. 
-            <br><br>
+          </p>
+          <p>
             <strong>Erfahrungen:</strong> Spektroskopie, Fehlerrechnung, statistische Auswertung (Poisson-, Gauß- und Chi²-Test), lineare Regression, Unsicherheitsanalyse u. v. m. 
-            <br><br>
+          </p>
+          <p>
             Ich biete methodische Klarheit, präzise Auswertung und eine verständliche Aufbereitung komplexer Ergebnisse.
           </p>
         </div>
 
-        <div class="angebot">
-          <h3>💻 Wissenschaftliche Software & Coding</h3>
+        <div class="angebot neon-card">
+          <h3>Wissenschaftliche Software & Coding</h3>
           <p>
             Entwicklung individueller Python-Lösungen für Forschung, Lehre und wissenschaftliche Anwendungen. 
-            <br><br>
+          </p>
+          <p>
             <strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung von Messabläufen, Prototyping und Erstellung wissenschaftlicher Tools. 
-            <br><br>
+          </p>
+          <p>
             Dazu gehört auch die Anbindung von Sensoren (z. B. für Labor-Messsysteme), die Entwicklung interaktiver Dashboards sowie die Aufbereitung wissenschaftlicher Daten für Publikationen und Präsentationen.
           </p>
         </div>
 
-        <div class="angebot">
-          <h3>🎵 Music & Audio – künstlerisch & wissenschaftlich</h3>
+        <div class="angebot neon-card">
+          <h3>Music & Audio – künstlerisch & wissenschaftlich</h3>
           <p>
             Künstlerische Projekte im Bereich analoger und elektronischer Musik mit wissenschaftlichem Anspruch. 
-            <br><br>
+          </p>
+          <p>
             <strong>Leistungen:</strong> Sounddesign, Komposition, Mastering und Audio-Processing mit Bezug zu Akustik und Signalverarbeitung. 
-            <br><br>
+          </p>
+          <p>
             <strong>Besonderheit:</strong> Verbindung von naturwissenschaftlichem Verständnis (z. B. FFT-Analysen, Resonanzphänomene) mit künstlerischem Ausdruck – für technisch fundierte und kreative Ergebnisse.
           </p>
         </div>
 
-        <div class="angebot">
-          <h3>📸 Wissenschaftliche & künstlerische Visuals</h3>
+        <div class="angebot neon-card">
+          <h3>Wissenschaftliche & künstlerische Visuals</h3>
           <p>
             Fotografie, Videografie und visuelle Gestaltung im Spannungsfeld von Wissenschaft und Kunst. 
-            <br><br>
+          </p>
+          <p>
             <strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, künstlerische Fotografie, Visuals und mediale Konzepte mit futuristisch-technischem Anspruch. 
-            <br><br>
+          </p>
+          <p>
             <strong>Ziel:</strong> die Kombination aus klarer Darstellung wissenschaftlicher Inhalte und künstlerischer Ausdruckskraft.
           </p>
         </div>
@@ -76,7 +87,11 @@
   </main>
 
   <footer>
-    <p>© 2025 Daniel S.M. Möhle</p>
+    <p>
+      © 2025 Daniel S.M. Möhle · 
+      <a href="impressum.html">Impressum</a> · 
+      <a href="datenschutz.html">Datenschutz</a>
+    </p>
   </footer>
 </body>
 </html>
