--- a/angebote.html
+++ b/angebote.html
@@ -30,26 +30,26 @@
         <div class="angebot neon-card">
           <h3>Science & Beratung</h3>
           <p>
-            Fachliche Unterstützung in naturwissenschaftlichen Projekten, mit Schwerpunkt Physik und angrenzende Wissenschaften. 
+            Fachliche Unterstützung in naturwissenschaftlichen Projekten, mit Schwerpunkt Physik und angrenzende Wissenschaften.
           </p>
           <p>
-            <strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und Erstellung fachlicher Texte. 
+            <strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und Erstellung analytischer Texte.
           </p>
           <p>
-            <strong>Erfahrungen:</strong> Spektroskopie, Fehlerrechnung, statistische Auswertung (Poisson-, Gauß- und Chi²-Test), lineare Regression, Unsicherheitsanalyse u. v. m. 
+            <strong>Erfahrungen:</strong> Spektroskopie, Fehlerrechnung, statistische Auswertung (Poisson-, Gauß- und Chi²-Test), lineare Regression, Unsicherheitsanalyse u. v. m.
           </p>
           <p>
-            Ich biete methodische Klarheit, präzise Auswertung und eine verständliche Aufbereitung komplexer Ergebnisse.
+            Ziel: methodische Klarheit, präzise Auswertung und verständliche Aufbereitung komplexer Ergebnisse.
           </p>
         </div>
 
         <div class="angebot neon-card">
           <h3>Wissenschaftliche Software & Coding</h3>
           <p>
-            Entwicklung individueller Python-Lösungen für Forschung, Lehre und wissenschaftliche Anwendungen. 
+            Entwicklung individueller Python-Lösungen für Forschung, Lehre und wissenschaftliche Anwendungen.
           </p>
           <p>
-            <strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung von Messabläufen, Prototyping und Erstellung wissenschaftlicher Tools. 
+            <strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung von Messabläufen, Prototyping und Erstellung wissenschaftlicher Tools.
           </p>
           <p>
             Dazu gehört auch die Anbindung von Sensoren (z. B. für Labor-Messsysteme), die Entwicklung interaktiver Dashboards sowie die Aufbereitung wissenschaftlicher Daten für Publikationen und Präsentationen.
@@ -59,26 +59,52 @@
         <div class="angebot neon-card">
           <h3>Music & Audio – künstlerisch & wissenschaftlich</h3>
           <p>
-            Künstlerische Projekte im Bereich analoger und elektronischer Musik mit wissenschaftlichem Anspruch. 
+            Künstlerische Projekte im Bereich analoger und elektronischer Musik, kombiniert mit wissenschaftlichem Anspruch.
           </p>
           <p>
-            <strong>Leistungen:</strong> Sounddesign, Komposition, Mastering und Audio-Processing mit Bezug zu Akustik und Signalverarbeitung. 
+            <strong>Leistungen:</strong> Sounddesign, Komposition, Mastering und Audio-Processing im Kontext von Akustik und Signalverarbeitung.
           </p>
           <p>
-            <strong>Besonderheit:</strong> Verbindung von naturwissenschaftlichem Verständnis (z. B. FFT-Analysen, Resonanzphänomene) mit künstlerischem Ausdruck – für technisch fundierte und kreative Ergebnisse.
+            <strong>Besonderheit:</strong> Verbindung naturwissenschaftlicher Methoden (z. B. FFT-Analysen, Resonanzphänomene) mit künstlerischem Ausdruck – für technisch fundierte und kreative Ergebnisse.
           </p>
         </div>
 
         <div class="angebot neon-card">
           <h3>Wissenschaftliche & künstlerische Visuals</h3>
           <p>
-            Fotografie, Videografie und visuelle Gestaltung im Spannungsfeld von Wissenschaft und Kunst. 
+            Fotografie, Videografie und visuelle Gestaltung im Spannungsfeld von Wissenschaft und Kunst.
           </p>
           <p>
-            <strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, künstlerische Fotografie, Visuals und mediale Konzepte mit futuristisch-technischem Anspruch. 
+            <strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, künstlerische Fotografie, Visuals und mediale Konzepte mit futuristisch-technischem Anspruch.
           </p>
           <p>
             <strong>Ziel:</strong> die Kombination aus klarer Darstellung wissenschaftlicher Inhalte und künstlerischer Ausdruckskraft.
+          </p>
+        </div>
+
+        <div class="angebot neon-card">
+          <h3>Lehre & Wissenstransfer</h3>
+          <p>
+            Vermittlung von Wissen in Naturwissenschaften, Technik und Programmierung.
+          </p>
+          <p>
+            <strong>Formate:</strong> Tutorien, Workshops, schriftliche Anleitungen und individuelle Lernkonzepte.
+          </p>
+          <p>
+            Besonderheit: praktische Beispiele (z. B. Code-Snippets, Experimentanleitungen), die den eigenständigen Lernprozess der Kund:innen unterstützen.
+          </p>
+        </div>
+
+        <div class="angebot neon-card">
+          <h3>Beratung & Coaching</h3>
+          <p>
+            Analytische Beratung im persönlichen und unternehmerischen Kontext – mit wissenschaftlicher Herangehensweise.
+          </p>
+          <p>
+            <strong>Schwerpunkte:</strong> Entscheidungsfindung, Strategieentwicklung, Prozessanalyse und wissenschaftlich fundierte Problemlösung.
+          </p>
+          <p>
+            Grundlage: ein physikalisch-analytisches Denken, das Klarheit und Struktur in komplexe Situationen bringt.
           </p>
         </div>
 
