--- a/angebote.html
+++ b/angebote.html
@@ -28,7 +28,7 @@
       <div class="angebot-list">
 
         <div class="angebot neon-card">
-          <h3>Science & Beratung</h3>
+          <h3>Science & Analyse</h3>
           <p>
             Fachliche Unterstützung in naturwissenschaftlichen Projekten, mit Schwerpunkt Physik und angrenzende Wissenschaften.
           </p>
