--- a/angebote.html
+++ b/angebote.html
@@ -27,71 +27,65 @@
       <h2>Meine Angebote</h2>
       <div class="angebot-list">
 
-        <div class="angebot neon-card">
-          <h3>Science & Beratung</h3>
-          <p>
-            Fachliche Unterstützung in naturwissenschaftlichen Projekten, mit Schwerpunkt Physik, Chemie und angrenzende Wissenschaften. 
-          </p>
-          <p>
-            <strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und Erstellung fachlicher Texte. 
-          </p>
-          <p>
-            <strong>Erfahrungen:</strong> 
-            Mechanik (Schwingungen, Resonanzen, Viskosität), 
-            Thermodynamik (Kalorimetrie, Wärmekapazitäten), 
-            Optik (Linsen, Beugung, Dispersion, Mikroskopie), 
-            Elektrizitätslehre & Magnetismus (Brückenschaltungen, Magnetfeldmessungen, Hysteresekurven), 
-            Chemie (Titrationen, Elektrochemie, Löslichkeits- und Gleichgewichtsversuche, Gasgesetze). 
-          </p>
-          <p>
-            Zusätzlich: Fehlerrechnung, statistische Tests (Poisson, Gauß, χ²), Regressionsmethoden, Vergleich mit Literaturwerten. 
-          </p>
-          <p>
-            Ich biete methodische Klarheit, präzise Auswertung und eine verständliche Aufbereitung komplexer Ergebnisse.
-          </p>
-        </div>
+        <a class="angebot-link" href="science-beratung.html">
+          <div class="angebot neon-card">
+            <h3>Science & Beratung</h3>
+            <p>Fachliche Unterstützung in Physik, Chemie und angrenzenden Wissenschaften.</p>
+            <p><strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und analytischer Texte.</p>
+            <p><strong>Erfahrungen:</strong> Mechanik (Schwingungen, Kreisel, Elastizität), Thermodynamik (Kalorimetrie, Wärmekapazitäten), Optik (Linsen, Beugung, Dispersion, Mikroskopie), Elektrizität & Magnetismus (Brücken, Hysterese, Magnetfeld), Chemie (Titrationen, Elektrochemie, Gleichgewichte, Gasgesetze), Atom- & Quantenphysik (Franck-Hertz, Spektroskopie), Kernphysik (Kernzerfall, Strahlungsanalyse), Rasterkraft-Analogie (Resonanzkurven, Oberflächenabbildung).</p>
+            <p><strong>Statistik & Methoden:</strong> Fehlerrechnung, Poisson/Gauß-Statistik, χ²-Tests, Regressionen, Unsicherheitsanalyse.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
 
-        <div class="angebot neon-card">
-          <h3>Wissenschaftliche Software & Coding</h3>
-          <p>
-            Entwicklung individueller Python-Lösungen für Forschung, Lehre und wissenschaftliche Anwendungen. 
-          </p>
-          <p>
-            <strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung von Messabläufen, Prototyping und Erstellung wissenschaftlicher Tools. 
-          </p>
-          <p>
-            Dazu gehört auch die Anbindung von Sensoren (z. B. für Labor-Messsysteme), die Entwicklung interaktiver Dashboards sowie die Aufbereitung wissenschaftlicher Daten für Publikationen und Präsentationen.
-          </p>
-          <p>
-            <strong>Praxis:</strong> Python-Auswertung von Experimenten (z. B. Schallgeschwindigkeit, Linsenoptik, Titrationskurven), Implementierung von Fehlerfortpflanzung, nichtlineare Fits, automatisierte Plots. 
-          </p>
-        </div>
+        <a class="angebot-link" href="software-coding.html">
+          <div class="angebot neon-card">
+            <h3>Wissenschaftliche Software & Coding</h3>
+            <p>Individuelle Python-Lösungen für Forschung, Lehre und Anwendungen.</p>
+            <p><strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung, Prototyping.</p>
+            <p><strong>Praxis:</strong> Sensor-Anbindung, Dashboards, Fourier-Spektralanalyse, Titrationskurven, Fehlerfortpflanzung, Fits in Atom- und Kernphysik, Bilddaten-Auswertung (Rasterkraft-Makroskop).</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
 
-        <div class="angebot neon-card">
-          <h3>Music & Audio – künstlerisch & wissenschaftlich</h3>
-          <p>
-            Künstlerische Projekte im Bereich analoger und elektronischer Musik mit wissenschaftlichem Anspruch. 
-          </p>
-          <p>
-            <strong>Leistungen:</strong> Sounddesign, Komposition, Mastering und Audio-Processing mit Bezug zu Akustik und Signalverarbeitung. 
-          </p>
-          <p>
-            <strong>Besonderheit:</strong> Verbindung von naturwissenschaftlichem Verständnis (z. B. FFT-Analysen, Resonanzphänomene, Schallgeschwindigkeit) mit künstlerischem Ausdruck – für technisch fundierte und kreative Ergebnisse.
-          </p>
-        </div>
+        <a class="angebot-link" href="music-audio.html">
+          <div class="angebot neon-card">
+            <h3>Music & Audio – künstlerisch & wissenschaftlich</h3>
+            <p>Künstlerische Projekte im Bereich analoger und elektronischer Musik.</p>
+            <p><strong>Leistungen:</strong> Sounddesign, Komposition, Mastering, Audio-Processing.</p>
+            <p><strong>Besonderheit:</strong> Verbindung naturwissenschaftlicher Methoden (FFT-Analysen, Resonanzphänomene, Akustik) mit künstlerischem Ausdruck.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
 
-        <div class="angebot neon-card">
-          <h3>Wissenschaftliche & künstlerische Visuals</h3>
-          <p>
-            Fotografie, Videografie und visuelle Gestaltung im Spannungsfeld von Wissenschaft und Kunst. 
-          </p>
-          <p>
-            <strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, künstlerische Fotografie, Visuals und mediale Konzepte mit futuristisch-technischem Anspruch. 
-          </p>
-          <p>
-            <strong>Ziel:</strong> die Kombination aus klarer Darstellung wissenschaftlicher Inhalte und künstlerischer Ausdruckskraft.
-          </p>
-        </div>
+        <a class="angebot-link" href="visuals.html">
+          <div class="angebot neon-card">
+            <h3>Wissenschaftliche & künstlerische Visuals</h3>
+            <p>Fotografie, Videografie & Visuals im Spannungsfeld von Wissenschaft & Kunst.</p>
+            <p><strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, Publikationsgrafiken, künstlerische Visuals, mediale Konzepte.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
+
+        <a class="angebot-link" href="lehre.html">
+          <div class="angebot neon-card">
+            <h3>Lehre & Wissenstransfer</h3>
+            <p>Wissen vermitteln in Naturwissenschaften, Technik & Programmierung.</p>
+            <p><strong>Formate:</strong> Tutorien, Workshops, Lernkonzepte, Skripte.</p>
+            <p><strong>Besonderheit:</strong> Praxisnahe Beispiele (Code-Snippets, Experimentanleitungen) zur Unterstützung eigenständigen Lernens.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
+
+        <a class="angebot-link" href="coaching.html">
+          <div class="angebot neon-card">
+            <h3>Beratung & Coaching</h3>
+            <p>Analytische Beratung für persönliche & unternehmerische Fragestellungen.</p>
+            <p><strong>Schwerpunkte:</strong> Entscheidungsfindung, Strategie, Prozessanalyse, Problemlösung.</p>
+            <p><strong>Grundlage:</strong> Physikalisch-analytisches Denken für Klarheit & Struktur in komplexen Situationen.</p>
+            <p class="cta-inline">Details ansehen →</p>
+          </div>
+        </a>
 
       </div>
     </section>
@@ -106,3 +100,4 @@
   </footer>
 </body>
 </html>
+
