--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1 class="logo">Daniel S.M. Möhle</h1>
+    <h1 class="logo">
+      <img src="Logo (2).png" alt="Daniel S.M. Möhle Logo">
+    </h1>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
