--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <header>
     <h1 class="logo">
       <img src="Logo (2).png" alt="Daniel S.M. Möhle Logo">
+      <span>Daniel S.M. Möhle</span>
     </h1>
     <nav>
       <ul>
