--- a/projekte.html
+++ b/projekte.html
@@ -1,12 +1,17 @@
-<section class="projekte-intro">
-  <h2>Projekte</h2>
-  <p>
-    Auf dieser Seite präsentiere ich ausgewählte Projekte, Konzepte und Ideen. 
-    Sie spiegeln meine Denkweise, meinen Arbeitsstil und meine Interessen wider. 
-    <br><br>
-    <strong>Hinweis:</strong> Die hier dargestellten Inhalte sind keine Angebote im rechtlichen Sinne, 
-    sondern dienen ausschließlich zur Veranschaulichung und Inspiration. 
-    Eine Umsetzung in Kooperation mit Unternehmen, Institutionen oder anderen Partnern 
-    ist möglich, wird jedoch gesondert und ausdrücklich vereinbart.
-  </p>
-</section>
+<header>
+  <h1 class="logo">
+    <img src="Logo (2).png" alt="Daniel S.M. Möhle Logo">
+    <span>Daniel S.M. Möhle</span> <!-- Fallback -->
+  </h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="angebote.html">Angebote</a></li>
+      <li><a href="projekte.html" class="active">Projekte</a></li>
+      <li><a href="medien.html">Medien</a></li>
+      <li><a href="ueber-mich.html">Über mich</a></li>
+      <li><a href="impressum.html">Impressum</a></li>
+      <li><a href="datenschutz.html">Datenschutz</a></li>
+    </ul>
+  </nav>
+</header>
