--- a/angebote.html
+++ b/angebote.html
@@ -3,16 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Angebote – Daniel S.M. Möhle</title>
+  <title>Daniel S.M. Möhle – Science · Software · Music · Photography</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1 class="logo">Daniel S.M. Möhle</h1>
+    <h1 class="logo">
+      <img src="Logo (2.1).png" alt="Daniel S.M. Möhle Logo">
+      <span>Daniel S.M. Möhle</span>
+    </h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html" class="active">Angebote</a></li>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
