--- a/medien.html
+++ b/medien.html
@@ -1,30 +1,21 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medien – Daniel S.M. Möhle</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Header mit Logo + Navigation -->
-  <header>
-    <h1 class="logo">
-      <img src="Logo (2).png" alt="Daniel S.M. Möhle Logo">
-      <span>Daniel S.M. Möhle</span> <!-- Fallback falls Bild nicht lädt -->
-    </h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
-        <li><a href="projekte.html">Projekte</a></li>
-        <li><a href="medien.html" class="active">Medien</a></li>
-        <li><a href="ueber-mich.html">Über mich</a></li>
-        <li><a href="impressum.html">Impressum</a></li>
-        <li><a href="datenschutz.html">Datenschutz</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <h1 class="logo">
+    <img src="logo.png" alt="Daniel S.M. Möhle Logo">
+    <span>Daniel S.M. Möhle</span>
+  </h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="angebote.html">Angebote</a></li>
+      <li><a href="projekte.html" class="active">Projekte</a></li>
+      <li><a href="medien.html">Medien</a></li>
+      <li><a href="ueber-mich.html">Über mich</a></li>
+      <li><a href="impressum.html">Impressum</a></li>
+      <li><a href="datenschutz.html">Datenschutz</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <!-- Hauptinhalt -->
   <main>
