--- a/projekte.html
+++ b/projekte.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projekte – Daniel S.M. Möhle</title>
+  <title>SEITENTITEL – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="angebote.html">Angebote</a></li>
-        <li><a href="projekte.html" class="active">Projekte</a></li>
+        <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
         <li><a href="impressum.html">Impressum</a></li>
@@ -25,6 +25,7 @@
       </ul>
     </nav>
   </header>
+
 
   <!-- Hauptinhalt -->
   <main>
