--- a/angebote.html
+++ b/angebote.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Daniel S.M. Möhle – Science · Software · Music · Photography</title>
+  <title>SEITENTITEL – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
     <h1 class="logo">
-      <img src="Logo (2.1).png" alt="Daniel S.M. Möhle Logo">
+      <img src="logo.png" alt="Daniel S.M. Möhle Logo">
       <span>Daniel S.M. Möhle</span>
     </h1>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
@@ -24,6 +25,8 @@
       </ul>
     </nav>
   </header>
+
+
 
   <main>
     <section class="angebote">
@@ -94,6 +97,7 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>
       © 2025 Daniel S.M. Möhle · 
@@ -103,4 +107,3 @@
   </footer>
 </body>
 </html>
-
