--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Über mich – Daniel S.M. Möhle</title>
+  <title>SEITENTITEL – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header mit Logo + Navigation -->
+  <!-- Header -->
   <header>
     <h1 class="logo">
-      <img src="Logo (2).png" alt="Daniel S.M. Möhle Logo">
-      <span>Daniel S.M. Möhle</span> <!-- Fallback falls Bild nicht lädt -->
+      <img src="logo.png" alt="Daniel S.M. Möhle Logo">
+      <span>Daniel S.M. Möhle</span>
     </h1>
     <nav>
       <ul>
@@ -19,12 +19,13 @@
         <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
-        <li><a href="ueber-mich.html" class="active">Über mich</a></li>
+        <li><a href="ueber-mich.html">Über mich</a></li>
         <li><a href="impressum.html">Impressum</a></li>
         <li><a href="datenschutz.html">Datenschutz</a></li>
       </ul>
     </nav>
   </header>
+
 
   <!-- Hauptinhalt -->
   <main>
@@ -44,6 +45,7 @@
       </p>
     </section>
   </main>
+
 
   <!-- Footer -->
   <footer>
