--- a/music-audio.html
+++ b/music-audio.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Music & Audio – Daniel S.M. Möhle</title>
-  <meta name="description" content="Künstlerische & wissenschaftliche Audio-Projekte: Sounddesign, Komposition, Mastering und Audio-Analyse mit physikalischem Anspruch." />
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <h1 class="logo">Daniel S.M. Möhle</h1>
+    <h1 class="logo">
+      <img src="logo.png" alt="Daniel S.M. Möhle Logo">
+      <span>Daniel S.M. Möhle</span>
+    </h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html" class="active">Angebote</a></li>
+        <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -22,6 +25,7 @@
       </ul>
     </nav>
   </header>
+
 
   <main>
     <section class="hero">
@@ -71,8 +75,13 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Daniel S.M. Möhle · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
+    <p>
+      © 2025 Daniel S.M. Möhle · 
+      <a href="impressum.html">Impressum</a> · 
+      <a href="datenschutz.html">Datenschutz</a>
+    </p>
   </footer>
 </body>
 </html>
