--- a/software-coding.html
+++ b/software-coding.html
@@ -82,8 +82,13 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Daniel S.M. Möhle · <a href="impressum.html">Impressum</a> · <a href="datenschutz.html">Datenschutz</a></p>
+    <p>
+      © 2025 Daniel S.M. Möhle · 
+      <a href="impressum.html">Impressum</a> · 
+      <a href="datenschutz.html">Datenschutz</a>
+    </p>
   </footer>
 </body>
 </html>
