--- a/angebote.html
+++ b/angebote.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Angebote – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="angebote.html">Angebote</a></li>
+        <li><a href="angebote.html" class="active">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
         <li><a href="ueber-mich.html">Über mich</a></li>
@@ -26,9 +26,7 @@
     </nav>
   </header>
 
-
-
-
+  <!-- Hauptinhalt -->
   <main>
     <section class="angebote">
       <h2>Meine Angebote</h2>
@@ -38,9 +36,6 @@
           <div class="angebot neon-card">
             <h3>Science & Beratung</h3>
             <p>Fachliche Unterstützung in Physik, Chemie und angrenzenden Wissenschaften.</p>
-            <p><strong>Leistungen:</strong> Datenerhebung, Versuchsplanung, Durchführung von Experimenten, Entwicklung wissenschaftlicher Konzepte und analytischer Texte.</p>
-            <p><strong>Erfahrungen:</strong> Mechanik (Schwingungen, Kreisel, Elastizität), Thermodynamik (Kalorimetrie, Wärmekapazitäten), Optik (Linsen, Beugung, Dispersion, Mikroskopie), Elektrizität & Magnetismus (Brücken, Hysterese, Magnetfeld), Chemie (Titrationen, Elektrochemie, Gleichgewichte, Gasgesetze), Atom- & Quantenphysik (Franck-Hertz, Spektroskopie), Kernphysik (Kernzerfall, Strahlungsanalyse), Rasterkraft-Analogie (Resonanzkurven, Oberflächenabbildung).</p>
-            <p><strong>Statistik & Methoden:</strong> Fehlerrechnung, Poisson/Gauß-Statistik, χ²-Tests, Regressionen, Unsicherheitsanalyse.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -48,19 +43,15 @@
         <a class="angebot-link" href="software-coding.html">
           <div class="angebot neon-card">
             <h3>Wissenschaftliche Software & Coding</h3>
-            <p>Individuelle Python-Lösungen für Forschung, Lehre und Anwendungen.</p>
-            <p><strong>Schwerpunkte:</strong> Simulationen, Datenanalyse, Visualisierung, Automatisierung, Prototyping.</p>
-            <p><strong>Praxis:</strong> Sensor-Anbindung, Dashboards, Fourier-Spektralanalyse, Titrationskurven, Fehlerfortpflanzung, Fits in Atom- und Kernphysik, Bilddaten-Auswertung (Rasterkraft-Makroskop).</p>
+            <p>Individuelle Python-Lösungen: Simulationen, Datenanalyse, Visualisierung, Automatisierung.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
 
         <a class="angebot-link" href="music-audio.html">
           <div class="angebot neon-card">
-            <h3>Music & Audio – künstlerisch & wissenschaftlich</h3>
-            <p>Künstlerische Projekte im Bereich analoger und elektronischer Musik.</p>
-            <p><strong>Leistungen:</strong> Sounddesign, Komposition, Mastering, Audio-Processing.</p>
-            <p><strong>Besonderheit:</strong> Verbindung naturwissenschaftlicher Methoden (FFT-Analysen, Resonanzphänomene, Akustik) mit künstlerischem Ausdruck.</p>
+            <h3>Music & Audio</h3>
+            <p>Sounddesign, Komposition, Mastering & Audio-Processing mit wissenschaftlichem Anspruch.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -69,7 +60,6 @@
           <div class="angebot neon-card">
             <h3>Wissenschaftliche & künstlerische Visuals</h3>
             <p>Fotografie, Videografie & Visuals im Spannungsfeld von Wissenschaft & Kunst.</p>
-            <p><strong>Schwerpunkte:</strong> Illustrationen für Forschungsprojekte, Publikationsgrafiken, künstlerische Visuals, mediale Konzepte.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -77,9 +67,7 @@
         <a class="angebot-link" href="lehre.html">
           <div class="angebot neon-card">
             <h3>Lehre & Wissenstransfer</h3>
-            <p>Wissen vermitteln in Naturwissenschaften, Technik & Programmierung.</p>
-            <p><strong>Formate:</strong> Tutorien, Workshops, Lernkonzepte, Skripte.</p>
-            <p><strong>Besonderheit:</strong> Praxisnahe Beispiele (Code-Snippets, Experimentanleitungen) zur Unterstützung eigenständigen Lernens.</p>
+            <p>Tutorien, Workshops, Lernkonzepte & praxisnahe Vermittlung von Wissen.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
@@ -87,9 +75,7 @@
         <a class="angebot-link" href="coaching.html">
           <div class="angebot neon-card">
             <h3>Beratung & Coaching</h3>
-            <p>Analytische Beratung für persönliche & unternehmerische Fragestellungen.</p>
-            <p><strong>Schwerpunkte:</strong> Entscheidungsfindung, Strategie, Prozessanalyse, Problemlösung.</p>
-            <p><strong>Grundlage:</strong> Physikalisch-analytisches Denken für Klarheit & Struktur in komplexen Situationen.</p>
+            <p>Analytische Beratung & Strategieentwicklung für komplexe Fragestellungen.</p>
             <p class="cta-inline">Details ansehen →</p>
           </div>
         </a>
